<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryLight"
    tools:context=".ui.OnboardTestActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:elevation="0dp"
        android:background="@android:color/transparent"
        android:gravity="center_vertical"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <ImageButton
                android:id="@+id/btn_close_onboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/baseline_close_24"
                android:layout_marginStart="@dimen/normal_100"
                app:tint="@android:color/darker_gray" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:id="@+id/onboardText"
        android:padding="@dimen/normal_100">

        <ImageView
            android:layout_width="270dp"
            android:layout_height="180dp"
            android:src="@drawable/logo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_onboard"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_onboard_1"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textColor="@color/grey"
            android:textAlignment="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_onboard_2"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textColor="@color/grey"
            android:textAlignment="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_start_test"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:text="@string/start_test_btn"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textColor="@color/white"
        android:background="@drawable/bg_button_color_primary"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/onboardText"
        />
</LinearLayout>