<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.RegisterActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:elevation="0dp"
        android:background="@android:color/transparent"
        android:gravity="center_vertical"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <ImageButton
            android:id="@+id/btn_close_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/baseline_close_24"
            android:layout_marginStart="@dimen/normal_100"
            app:tint="@android:color/darker_gray" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="@dimen/normal_100">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:src="@drawable/logo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/normal_150"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:hintEnabled="false"
                android:layout_marginTop="@dimen/small_100">

                <EditText
                    android:id="@+id/et_name_register"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_edit_text"
                    android:paddingStart="@dimen/normal_100"
                    android:hint="@string/name"
                    android:paddingEnd="@dimen/normal_100"
                    android:textColor="@color/black"
                    android:textColorHint="#4D000000"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:hintEnabled="false"
                android:layout_marginTop="@dimen/normal_100">

                <EditText
                    android:id="@+id/et_email_register"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_edit_text"
                    android:paddingStart="@dimen/normal_100"
                    android:hint="@string/email"
                    android:paddingEnd="@dimen/normal_100"
                    android:textColor="@color/black"
                    android:textColorHint="#4D000000"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:hintEnabled="false"
                app:endIconMode="password_toggle"
                android:layout_marginTop="@dimen/normal_100">

                <EditText
                    android:id="@+id/et_password_register"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_edit_text"
                    android:paddingStart="@dimen/normal_100"
                    android:hint="@string/password"
                    android:paddingEnd="@dimen/normal_100"
                    android:textColor="@color/black"
                    android:textColorHint="#4D000000"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:hintEnabled="false"
                app:endIconMode="password_toggle"
                android:layout_marginTop="@dimen/normal_100">

                <EditText
                    android:id="@+id/et_confirm_password_register"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_edit_text"
                    android:paddingStart="@dimen/normal_100"
                    android:hint="@string/confirm_password"
                    android:paddingEnd="@dimen/normal_100"
                    android:textColor="@color/black"
                    android:textColorHint="#4D000000"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@drawable/bg_button_color_primary"
                android:layout_marginTop="@dimen/normal_175"/>

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/or"-->
<!--                android:textStyle="bold"-->
<!--                android:textColor="@color/black"-->
<!--                android:layout_gravity="center_horizontal"-->
<!--                android:layout_marginTop="@dimen/normal_100"/>-->

<!--            <Button-->
<!--                android:id="@+id/btn_register_google"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Register with google"-->
<!--                android:textColor="@color/white"-->
<!--                android:background="@drawable/bg_button_color_yellow"-->
<!--                android:layout_marginTop="@dimen/normal_175"/>-->
<!--            <Button-->
<!--                android:id="@+id/btn_register_fb"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Register with facebook"-->
<!--                android:textColor="@color/white"-->
<!--                android:background="@drawable/bg_button_color_facebook"-->
<!--                android:layout_marginTop="@dimen/normal_175"/>normal_175-->

        </LinearLayout>

    </ScrollView>

</LinearLayout>